samples/_failures_safe/1761377506_871956_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f818d20d.c: In function ‘get_user_choice’:
./samples/SAFE/__tmp_f818d20d.c:125:12: error: missing terminating " character
  125 |     printf("2. Show ERROR entries\n
      |            ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f818d20d.c:125:5: error: expected expression at end of input
  125 |     printf("2. Show ERROR entries\n
      |     ^~~~~~
./samples/SAFE/__tmp_f818d20d.c:125:5: error: expected declaration or statement at end of input
